core/tests/ui/store/table_as_invalid_target_rejected.rs
use appdb::{Id, Store};
use serde::{Deserialize, Serialize};
use surrealdb::types::SurrealValue;

#[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
#[table_as("post")]
struct PostBase {
    id: Id,
}

fn main() {}
